--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/jabirafarhath/">LinkedIn</a>
       <a class="footer-link" href="https://www.instagram.com/codx.spxm/">Instagram</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://jabirafarhath.github.io/cv2/">Website</a>
       <p class="copyright">© Jabira Farhath</p>
     </div>
   </body>
